simulation-scripts/scenario/admission-sign-container/apply/03-scenario.yaml
## Safe & Sign Resources
apiVersion: v1
kind: Namespace
metadata:
  name: sign
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safe-sign
  labels:
    app: safe-sign
  namespace: sign
spec:
  selector:
    matchLabels:
      app: safe-sign
  replicas: 1
  template:
    metadata:
      labels:
        app: safe-sign
    spec:
      containers:
      - name: safe-sign
        image: docker.io/wakeward/s-app:latest
        ports:
        - name: http
          containerPort: 8080
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: safe-sign
  namespace: sign
spec:
  selector:
    app: safe-sign
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8090
---
## Authorized Resources
apiVersion: v1
kind: Namespace
metadata:
  name: authorized
---
## Attack Container Resources
apiVersion: v1
kind: Namespace
metadata:
  name: factory
---
apiVersion: v1
kind: Pod
metadata:
  name: factory-terminal
  namespace: factory
spec:
  serviceAccountName: factory-engineer
  containers:
  # basic container image
  - image: docker.io/jpts/debian:latest
    command: ["sleep", "2d"]
    name: factory-terminal
    securityContext:
      allowPrivilegeEscalation: false
  restartPolicy: Always
---
