simulation-scripts/scenario/admission-sign-container/apply/02-signed-admission-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: signed-admission
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: signed-admission
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespaces:
              - default
              - authorized
      verifyImages:
      - imageReferences:
        - "*/*"
        attestors:
        - count: 1
          entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE6lvZM3TZvfb24ox9CHi8aG4KWW3t
[...]
                -----END PUBLIC KEY-----
